2018-09-09  Karl Berry  <karl@tug.org>

	* overbmp.test: LC_ALL=LANGUAGE=C.

2018-01-18  Karl Berry  <karl@tug.org>

	* error_routines.c (yyerror, warning_0, fatal_error_0,
	internal_error_0),
	* out_routines.c (out): printf %s instead of direct string.
	From Debian.

2016-02-27  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* omfonts.c, help.test: Add an option -charcode-format for
	compatibility.

2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-01-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* error_routines.[ch], omfonts.c: Non-zero error return code.
	* check.test: Also test writung OPL file to stdout.
	* selectfont.test: Also test writung OVP file to stdout.
	* bad.test, version.test: Shell scripts for new tests.
	* tests/badofm.ofm, tests/badopl.opl, tests/badovf.{ofm,ovf},
	tests/badovp.ovp: New test input files.
	* Makefile.am: Add new test shell scripts and input files.	

2014-11-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* omfonts.c: Help texts for C and Web2C versions differ.
	* help.test: New shell script to test help messages and options.

2014-09-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* font_routines.c: Fixed packet_table realloc bug.
	Clean up font_table and move_table memory management.
	Reduce BLOCK 256 => 16 to reduce wasted packet_table space.

2014-08-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* char_routines.c: Move '#define check_range' to the top-level.

2014-08-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* char_routines.c, ligkern_routines.c: More OFM checking.
	* check.test, check.{ofm,opl}, checked.opl:
	Shell script and data for a new test.
	* Makefile.am: Add the new test.

2014-08-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ofonts.test: Fix parallel tests.

2014-08-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ligkern_routines.c, out_routines.h, ligkern.test: Detect
	unused parts of OFM ligkern program.